--- a/Typecraft/angular.json
+++ b/Typecraft/angular.json
@@ -3,39 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Typescript": {
+    "Typecraft": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {
-        "@schematics/angular:class": {
-          "skipTests": true
-        },
-        "@schematics/angular:component": {
-          "skipTests": true
-        },
-        "@schematics/angular:directive": {
-          "skipTests": true
-        },
-        "@schematics/angular:guard": {
-          "skipTests": true
-        },
-        "@schematics/angular:module": {
-          "skipTests": true
-        },
-        "@schematics/angular:pipe": {
-          "skipTests": true
-        },
-        "@schematics/angular:service": {
-          "skipTests": true
-        }
-      },
+      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Typescript",
+            "outputPath": "dist/Typecraft",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -80,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Typescript:build"
+            "browserTarget": "Typecraft:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Typescript:build:production"
+              "browserTarget": "Typecraft:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Typescript:build"
+            "browserTarget": "Typecraft:build"
           }
         },
         "test": {
@@ -125,7 +103,7 @@
         }
       }
     },
-    "Typescript-e2e": {
+    "Typecraft-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -134,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Typescript:serve"
+            "devServerTarget": "Typecraft:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Typescript:serve:production"
+              "devServerTarget": "Typecraft:serve:production"
             }
           }
         },
@@ -154,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "Typescript"
+  "defaultProject": "Typecraft"
 }
