build and deploy scripts

--- a/Redrain/tsconfig.json
+++ b/Redrain/tsconfig.json
@@ -1,7 +1,8 @@
 {
-	"compilerOptions": 
+	"compilerOptions":
 	{
 		"module": "amd",
-		"sourceMap": true
+		"sourceMap": true,
+        "outDir": "build"
 	}
 }
