redrain: moved src files into src

--- a/Redrain/tsconfig.json
+++ b/Redrain/tsconfig.json
@@ -2,7 +2,10 @@
 	"compilerOptions":
 	{
 		"module": "amd",
-		"sourceMap": true,
+		"sourceMap": false,
         "outDir": "build"
-	}
+	},
+    "include": [
+        "src/**/*"
+    ]
 }
