added slow to coop

--- a/Swordcraft/src/assets/config.json
+++ b/Swordcraft/src/assets/config.json
@@ -13,7 +13,7 @@
     "COOP_CONTROLS_P2_RIGHT": "D",
     "COOP_CONTROLS_P2_DOWN": "S",
     "COOP_CONTROLS_P2_LEFT": "A",
-    "COOP_CONTROLS_P2_ATTACK": "Control",
+    "COOP_CONTROLS_P2_ATTACK": "Shift",
     "SPAWN_TIMER": 90,
     "SPAWN_DECREASE_MULTIPLIER": 0.97
 }
